added an animation to move the self.view when the menu button is tapped

--- a/Accomplist/Base.lproj/Main.storyboard
+++ b/Accomplist/Base.lproj/Main.storyboard
@@ -66,6 +66,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="menuButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="V2y-CA-lFX"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
