--- a/Accomplist/Base.lproj/Main.storyboard
+++ b/Accomplist/Base.lproj/Main.storyboard
@@ -39,18 +39,8 @@
                                             <action selector="editButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EHc-tZ-2bu"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accomplist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7g-0G-EUf">
-                                        <rect key="frame" x="100" y="19" width="175" height="42"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="175" id="RVY-x1-oub"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="42" id="dRl-78-QOa"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="LouisGeorgeCafe-Bold" family="Louis George Cafe" pointSize="34"/>
-                                        <color key="textColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="List Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wZ-kk-cED">
-                                        <rect key="frame" x="144" y="91" width="87" height="30"/>
+                                        <rect key="frame" x="144" y="111" width="87" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="0yP-QB-enn"/>
                                         </constraints>
@@ -80,7 +70,7 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoDark" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k1d-b6-DKq">
-                                                            <rect key="frame" x="288" y="10" width="22" height="22"/>
+                                                            <rect key="frame" x="308" y="11" width="22" height="22"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <connections>
@@ -96,7 +86,7 @@
                                             <outlet property="delegate" destination="BYZ-38-t0r" id="6to-Z7-GbH"/>
                                         </connections>
                                     </tableView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ib5-kz-5eo">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ib5-kz-5eo">
                                         <rect key="frame" x="19" y="7.5" width="36" height="65"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="65" id="mRK-0m-Jro"/>
@@ -105,7 +95,7 @@
                                         <size key="titleShadowOffset" width="1" height="1"/>
                                         <state key="normal" title="≡">
                                             <color key="titleColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <color key="titleShadowColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <state key="selected">
                                             <color key="titleColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -117,24 +107,35 @@
                                             <action selector="menuButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fNv-HM-c8d"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accomplist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7g-0G-EUf">
+                                        <rect key="frame" x="181" y="19" width="175" height="42"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="175" id="RVY-x1-oub"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="42" id="dRl-78-QOa"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="LouisGeorgeCafe-Bold" family="Louis George Cafe" pointSize="34"/>
+                                        <color key="textColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="mPl-Bo-5bF" secondAttribute="bottom" constant="18" id="0tl-7h-Yvs"/>
-                                    <constraint firstItem="joQ-QC-ebv" firstAttribute="top" secondItem="7wZ-kk-cED" secondAttribute="bottom" constant="20" id="2Yf-Zv-ake"/>
+                                    <constraint firstItem="joQ-QC-ebv" firstAttribute="top" secondItem="7wZ-kk-cED" secondAttribute="bottom" id="2Yf-Zv-ake"/>
                                     <constraint firstItem="mPl-Bo-5bF" firstAttribute="width" secondItem="Wcy-FK-enb" secondAttribute="width" multiplier="0.9" id="B7N-Ul-Pm6"/>
                                     <constraint firstItem="Ib5-kz-5eo" firstAttribute="leading" secondItem="Wcy-FK-enb" secondAttribute="leading" constant="19" id="Djo-9C-eFU"/>
                                     <constraint firstItem="cbr-rI-A4U" firstAttribute="leading" relation="lessThanOrEqual" secondItem="joQ-QC-ebv" secondAttribute="trailing" constant="281" id="Dmb-Wb-WTs"/>
                                     <constraint firstItem="mPl-Bo-5bF" firstAttribute="centerX" secondItem="Wcy-FK-enb" secondAttribute="centerX" id="J3A-Om-kAD"/>
+                                    <constraint firstItem="M7g-0G-EUf" firstAttribute="leading" relation="lessThanOrEqual" secondItem="Ib5-kz-5eo" secondAttribute="trailing" constant="126" id="MY2-f8-vwT"/>
                                     <constraint firstItem="Ib5-kz-5eo" firstAttribute="top" secondItem="Wcy-FK-enb" secondAttribute="top" constant="7.5" id="UWw-ra-zvn"/>
                                     <constraint firstItem="M7g-0G-EUf" firstAttribute="top" secondItem="Wcy-FK-enb" secondAttribute="top" constant="19" id="V3b-dM-yt1"/>
                                     <constraint firstAttribute="trailing" secondItem="cbr-rI-A4U" secondAttribute="trailing" constant="19" id="cDn-cR-dbG"/>
                                     <constraint firstItem="Ib5-kz-5eo" firstAttribute="centerY" secondItem="M7g-0G-EUf" secondAttribute="centerY" id="dzT-ue-uGa"/>
-                                    <constraint firstItem="7wZ-kk-cED" firstAttribute="top" secondItem="M7g-0G-EUf" secondAttribute="bottom" constant="30" id="hU5-hq-RKK"/>
+                                    <constraint firstItem="7wZ-kk-cED" firstAttribute="top" secondItem="M7g-0G-EUf" secondAttribute="bottom" constant="50" id="hU5-hq-RKK"/>
                                     <constraint firstItem="joQ-QC-ebv" firstAttribute="leading" secondItem="Wcy-FK-enb" secondAttribute="leading" constant="19" id="mNX-1O-Avd"/>
+                                    <constraint firstAttribute="trailing" secondItem="M7g-0G-EUf" secondAttribute="trailing" constant="19" id="nIa-3q-qwr"/>
                                     <constraint firstItem="cbr-rI-A4U" firstAttribute="centerY" secondItem="joQ-QC-ebv" secondAttribute="centerY" id="s0C-ih-pOK"/>
                                     <constraint firstItem="mPl-Bo-5bF" firstAttribute="height" secondItem="Wcy-FK-enb" secondAttribute="height" multiplier="0.7" id="uhU-Uj-Wy5"/>
-                                    <constraint firstItem="M7g-0G-EUf" firstAttribute="centerX" secondItem="Wcy-FK-enb" secondAttribute="centerX" id="w49-MP-qsi"/>
                                     <constraint firstItem="7wZ-kk-cED" firstAttribute="centerX" secondItem="Wcy-FK-enb" secondAttribute="centerX" id="yLT-DV-ok8"/>
                                 </constraints>
                             </view>
